# agentic

./: .gcloudignore  .gitignore  MULTI_AGENT_README.md  PRESENTATION_README.md  README.md  TOOL_CLARITY.md  basic_test.py  demo_agents.py  frontend.py  network_agent-0.1.0-py3-none-any.whl  pyproject.toml  simple_ingestion.py  simple_test.py  test_agent_clarity.py  test_gcp.py  test_ingestion.py  test_validation.py
.ipynb_checkpoints/: README-checkpoint.md  deploy_agent_engine-checkpoint.py  pyproject-checkpoint.toml
Frontend/: Dockerfile  frontend.py  requirements.txt
Frontend/.ipynb_checkpoints/: Dockerfile-checkpoint  frontend-checkpoint.py  requirements-checkpoint.txt
backend/: .env  .gitignore  agent.py  prompts.py  requirements.txt  tools.py
backend/.ipynb_checkpoints/: agent-checkpoint.py  prompts-checkpoint.py  tools-checkpoint.py
backend/ingestion_agent/: .env  __init__.py  agent.py  prompts.py  tools.py
backend/resoltuion_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/subagents/analytics_agent/: agent.py
backend/subagents/analytics_agent/.ipynb_checkpoints/: __init__-checkpoint.py
backend/subagents/incident_ingestion_agent/: __init__.py  agent.py  tools.py
backend/subagents/ingest_agent/: Untitled.ipynb  __init__.py  agent.py  tools.py
backend/subagents/ingest_agent/.ipynb_checkpoints/: tools-checkpoint.py
deployment/: link_to_agentspace.ipynb  network_agent-0.1.0-py3-none-any.whl
deployment/.ipynb_checkpoints/: expose_to_agentspace-checkpoint.sh
test/: data.xlsx  insert.py  seach.py
